@@ -24,13 +24,16 @@
 
 echo ""
 echo -n "Step 1: Cleaning bundle... "
-rm aMule.app/Contents/Frameworks/* 1> /dev/null 2> /dev/null && rm aMule.app/Contents/MacOS/* 1> /dev/null 2> /dev/null
+rm aMule.app/Contents/Frameworks/* aMule.app/Contents/MacOS/* 1> /dev/null 2> /dev/null
+rm -r aMule.app/Contents/Resources/webserver 1> /dev/null 2> /dev/null
 echo "Done"
 echo ""
 echo -n "Step 2: Copying aMule to app bundle... " 
 cp src/amule aMule.app/Contents/MacOS/
 cp src/amuleweb aMule.app/Contents/MacOS/
 cp src/ed2k aMule.app/Contents/MacOS/
+cp -R src/webserver aMule.app/Contents/Resources
+find aMule.app/Contents/Resources/webserver \( -name CVS -o -name .cvsignore -o -name "Makefile*" \) -print0 | xargs -0 rm -r
 echo "Done"
 echo ""
 echo "Step 3: Copying libs to Framework"
